Novo template do trabalho ja tem algumas alterações

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="img/core-img/favicon.ico">
 
     <!-- Style CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     
 </head>
 
@@ -654,7 +654,7 @@
     <script src="js/jquery-ui.min.js"></script>
     <!-- Active js -->
     <script src="js/active.js"></script>
-    <script src="CLOCK.js" type="text/javascript"></script>
+    <script src="js/CLOCK.js" type="text/javascript"></script>
     
 
 </body>
