--- a/public_html/index.html
+++ b/public_html/index.html
@@ -95,8 +95,17 @@
                                     </div>
                                 </li>-->
                                 <li><a href="categorias.html">Promocões</a></li>
-                                <li><a href="Criar_Anuncio.html">Criar Anuncio</a></li>
-                                <li><a href="">Top Vendas</a></li>
+                                <li class="nav-item Marcas">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Marcas
+                                    </a>
+                                    <div class="dropdown-menu" aria-disabled="true">
+                                        <a class="dropdown-item" href="#">Action</a>
+                                        <a class="dropdown-item" href="#">Another action</a>
+                                        <a class="dropdown-item" href="#">Something else here</a>
+                                    </div>
+                                </li>
+
                                 <li><a href="login.html">Login</a></li>
                                 <!--<li><a href="registar.html">registar</a></li>-->
                             </ul>
@@ -182,9 +191,7 @@
                             <div class="row">
 
                                 <div class="col-12 col-md-4 col-lg-3">
-                                    <div class="form-group">
-                                        <input type="input" class="form-control" name="input" placeholder="Palavra chave">
-                                    </div>
+
                                 </div>
 
                                 <!--div class="col-12 col-md-4 col-lg-3">
@@ -300,9 +307,6 @@
                             <a href="samsungs7edge.html">
                                 <img src="imagens/SaoTome.jpg" alt="">
                             </a>
-                            <div class="tag">
-                                <span>Venda</span>
-                            </div>
                             <div class="list-price">
                                 <p>10€</p>
                             </div>
@@ -325,9 +329,6 @@
                            <a href="iphonexs.html">
                             <img src="imagens/bar_ghana.jpg" alt="">
                                 </a>
-                            <div class="tag">
-                                <span>Venda</span>
-                            </div>
                             <div class="list-price">
                                 <p>13€</p>
                             </div>
@@ -350,9 +351,6 @@
                             <a href="xiaomia2.html">
                                 <img src="imagens/7Ann6qZeSXuP7wcj8Hpb_esmeraldas_600sq.jpg" alt="">
                             </a>
-                            <div class="tag">
-                                <span>Troca</span>
-                            </div>
                             <div class="list-price">
                                 <p>8€</p>
                             </div>
@@ -374,9 +372,6 @@
                              <a href="samsungs10.html">
                                 <img src="imagens/toblerone-barra.jpg" alt="">
                              </a>
-                            <div class="tag">
-                                <span>Venda</span>
-                            </div>
                             <div class="list-price">
                                 <p>20€</p>
                             </div>
@@ -402,9 +397,6 @@
                             <a href="oneplus6t.html">
                                 <img src="imagens/roccher.jpg" alt="">
                             </a>
-                            <div class="tag">
-                                <span>Venda</span>
-                            </div>
                             <div class="list-price">
                                 <p>57€</p>
                             </div>
@@ -418,6 +410,7 @@
                     </div>
                 </div>
 
+
                 <!-- Single Featured Property -->
                 <div class="col-12 col-md-6 col-xl-4">
                     <div class="single-featured-property mb-50 wow fadeInUp" data-wow-delay="600ms">
@@ -426,9 +419,6 @@
                             <a href="samsunga6.html">
                                 <img src="imagens/mon.jpg" alt="">
                             </a>
-                            <div class="tag">
-                                <span>Troca</span>
-                            </div>
                             <div class="list-price">
                                 <p>234€</p>
                             </div>
@@ -512,6 +502,7 @@
                         </div>
                     </div>
                 </div>
+
 
                 <!-- Single Featured Property -->
                 
